Quota: Reduce "should/must remain available" thresholds

Chrome has a "should remain available" disk space threshold; when less
than this amount is free, the effective quota for each origin drops to
0 so new writes will fail. This is present to avoid Chrome being
responsible for filling the disk which generally makes devices unhappy.

The threshold was set at 10%, which is too conservative; offline
storage would basically stop working when a disk was 90% full, which
is a common case - e.g. on a 200GB disk, writes start to fail with
20GB free! This change adjusts the threshold to 1%; for example, on a
32GB device this ensures Chrome does not push usage past 320MB
remaining free.

Similarly, Chrome has a "must remain available" threshold at which
point data starts being evicted - keeping the device functional, but
potentially losing user data. This was set at 1%, but is similarly
adjusted down to 0.25%. For a 32GB device this ensures Chrome will
drop data only when less than 80MB are free.

Bug: 802027
Change-Id: I09ec3531ef34637413a1d239b546dc200d3d648a
Reviewed-on: https://chromium-review.googlesource.com/933365
Commit-Queue: Joshua Bell <jsbell@chromium.org>
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538818}
Former-commit-id: 9508bf4e08990e7024140cf96436f21239cb17c3