storage/browser/quota/quota_settings.cc
@@ -57,12 +57,21 @@ base::Optional<storage::QuotaSettings> CalculateNominalDynamicSettings(
   const double kTemporaryPoolSizeRatio = 1.0 / 3.0;  // 33%
 
   // The fraction of the device's storage the browser attempts to
-  // keep free.
-  const double kShouldRemainAvailableRatio = 0.1;  // 10%
+  // keep free. If there is less than this amount of storage free
+  // on the device, Chrome will grant 0 quota to origins.
+  // Examples:
+  //     32GB device: 1% is 320MB
+  //    200GB device: 1% is   2GB
+  //      1TB device: 1% is  10GB
+  const double kShouldRemainAvailableRatio = 0.01;  // 1%
 
   // The fraction of the device's storage the browser attempts to
-  // keep free at all costs.
-  const double kMustRemainAvailableRatio = 0.01;  // 1%
+  // keep free at all costs. Data will be aggressively evicted.
+  // Examples:
+  //     32GB device: 0.25% is  80MB
+  //    200GB device: 0.25% is 500MB
+  //      1TB device: 0.25% is 2.5GB
+  const double kMustRemainAvailableRatio = 0.0025;  // 0.25%
 
   // Determines the portion of the temp pool that can be
   // utilized by a single host (ie. 5 for 20%).
